--- a/CSharpZorkMachine/CSharpZorkMachine.csproj
+++ b/CSharpZorkMachine/CSharpZorkMachine.csproj
@@ -51,10 +51,12 @@
     <Compile Include="Bits.cs" />
     <Compile Include="BitSize.cs" />
     <Compile Include="ByteAddress.cs" />
+    <Compile Include="GameMemory.cs" />
     <Compile Include="ImmutableByteWrapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Word.cs" />
+    <Compile Include="WordAddress.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
