Added more types for abbreviation table

--- a/CSharpZorkMachine.Tests/CSharpZorkMachine.Tests.csproj
+++ b/CSharpZorkMachine.Tests/CSharpZorkMachine.Tests.csproj
@@ -59,6 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestAbbreviationTableStructs.cs" />
     <Compile Include="TestWord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
