--- a/CSharpZorkMachine/CSharpZorkMachine.csproj
+++ b/CSharpZorkMachine/CSharpZorkMachine.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbbreviationTableStructs.cs" />
     <Compile Include="BitNumber.cs" />
     <Compile Include="Bits.cs" />
     <Compile Include="BitSize.cs" />
